[project]
name = "tictactoe-rl"
version = "0.1.0"
description = ""
authors = [
    {name = "Jesus Angel Hernandez de Rojas",email = "jhderojas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)"
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
